# ZoneVision

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_report.json  benchmark_report.md  per_image_metrics.csv  render_enhanced_overlay.py
benchmarks/figure_data/: fig_detection_counts.csv  fig_diameter_scatter.csv  fig_iou_distribution_raw.csv  fig_tp_fp_fn.csv  fig_training_curves.csv  table_paper_summary.json
benchmarks/vlm_analysis/: vlm_analysis.json  vlm_consistency.csv  vlm_failure_analysis.csv  vlm_paper_summary.json
configs/: config.yaml
examples/sample_data/: coco_annotations.json
scripts/: evaluate_predictions.py  export_coco_yolo.py  generate_benchmark_report.py  inspect_coco.py  prepare_bootstrap_dataset.py  prepare_coco.py  run_pipeline.py  run_vlm_analysis.py  train_rfdetr.py  train_yolo.py
zonevision/: coco.py  config.py  glm_qc.py  io_utils.py  pipeline.py  plate.py  postprocess.py  rfdetr_integration.py
